tests/parser-test-files/unicode.txt
================================================================================
100 Bad variable name (:disable)

Disabled pending unicode output debugging in Allegro
================================================================================

(package caolton-unit-tests)

(define-class (C :a)
  (.方法 (:a -> :a)))

--------------------------------------------------------------------------------

error: Invalid variable
  --> test:4:3
   |
 4 |    (.方法 (:a -> :a)))
   |     ^^^ variables cannot start with '.'

================================================================================
101 Bad variable name, after UTF8 docstring (:disable)

Disabled pending unicode output debugging in Allegro
================================================================================

(package caolton-unit-tests)

(define-class (C :a)
  (m "非常に重要な方法" (:a -> :a))
  (.方法 (:a -> :a)))

--------------------------------------------------------------------------------

error: Invalid variable
  --> test:5:3
   |
 5 |    (.方法 (:a -> :a)))
   |     ^^^ variables cannot start with '.'
